<resources>
	<string name="app_name">Random Number Generator</string>
	<string name="generated_number_text">0</string>
	<string name="toast_btn">Toast</string>
	<string name="count_btn">Count</string>
	<string name="random_btn">Random</string>
	<string name="go_back_btn">Go Back</string>
	<string name="random_heading">Here is a random number between 0 and %1d</string>
	<string name="random_number_label">R</string>
	<string name="randomly_generated_number_label">R</string>
</resources>
