<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity"
		android:background="@color/screenBackground">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/generated_number_text"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:fontFamily="sans-serif"
			android:textSize="72sp"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:id="@+id/generated_number_text"
			app:layout_constraintVertical_bias="0.3"/>

	<Button
			android:text="@string/toast_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/toast_btn"
			android:layout_marginTop="8dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/generated_number_text"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="24dp"
			android:background="@color/buttonBackground"
			android:textSize="18sp"
			android:onClick="toastMe"/>

	<Button
			android:text="@string/count_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/count_button"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/generated_number_text"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/toast_btn"
			android:layout_marginEnd="8dp"
			app:layout_constraintStart_toEndOf="@+id/random_btn"
			android:layout_marginStart="8dp"
			android:background="@color/buttonBackground"
			android:textSize="18sp"
			android:onClick="countMe"/>

	<Button
			android:text="@string/random_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/random_btn"
			android:layout_marginTop="8dp"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/generated_number_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginEnd="24dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:background="@color/buttonBackground"
			android:textSize="18sp"
			android:onClick="randomMe"/>

</android.support.constraint.ConstraintLayout>
