<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".SecondActivity"
		android:background="@color/randomNumberScreenBackground">

	<TextView
			android:text="@string/random_heading"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/random_number_heading_label"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			android:layout_marginTop="24dp"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="24sp"/>

	<TextView
			android:text="@string/randomly_generated_number_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/random_number_label"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/random_number_heading_label"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			android:textColor="@android:color/white"
			android:textSize="72sp"
			android:textStyle="bold"
			app:layout_constraintVertical_bias="0.45"/>

	<Button
			android:text="@string/go_back_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/random_btn"
			android:layout_marginTop="8dp"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/random_number_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:background="@color/buttonBackground"
			android:textSize="18sp"
			android:onClick="goBackMe"/>

</android.support.constraint.ConstraintLayout>
